[project]
name = "Daily_ngram"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "yoonsen", email = "yoonsen@gmail.com"},
]
dependencies = ["dash>=3.0.0", "plotly>=6.0.1", "pandas>=2.2.3"]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
